[gd_scene load_steps=11 format=3 uid="uid://c3umccqlkc12c"]

[ext_resource type="Script" path="res://scripts/car.gd" id="1_hpxx8"]
[ext_resource type="ArrayMesh" uid="uid://bqao2y3peoq04" path="res://models/car_body.res" id="2_8sdff"]
[ext_resource type="ArrayMesh" uid="uid://bf5ccbdnpbm1m" path="res://models/car_wheel.res" id="3_mfi84"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u4mv7"]
albedo_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="BoxMesh" id="BoxMesh_f6nbg"]
material = SubResource("StandardMaterial3D_u4mv7")
size = Vector3(50, 1, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_pj52e"]
data = PackedVector3Array(-25, 0.5, 25, 25, 0.5, 25, -25, -0.5, 25, 25, 0.5, 25, 25, -0.5, 25, -25, -0.5, 25, 25, 0.5, -25, -25, 0.5, -25, 25, -0.5, -25, -25, 0.5, -25, -25, -0.5, -25, 25, -0.5, -25, 25, 0.5, 25, 25, 0.5, -25, 25, -0.5, 25, 25, 0.5, -25, 25, -0.5, -25, 25, -0.5, 25, -25, 0.5, -25, -25, 0.5, 25, -25, -0.5, -25, -25, 0.5, 25, -25, -0.5, 25, -25, -0.5, -25, 25, 0.5, 25, -25, 0.5, 25, 25, 0.5, -25, -25, 0.5, 25, -25, 0.5, -25, 25, 0.5, -25, -25, -0.5, 25, 25, -0.5, 25, -25, -0.5, -25, 25, -0.5, 25, 25, -0.5, -25, -25, -0.5, -25)

[sub_resource type="BoxMesh" id="BoxMesh_ggtqs"]
size = Vector3(3, 0.5, 5)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1eaoi"]
data = PackedVector3Array(-1.5, 0.25, 2.5, 1.5, 0.25, 2.5, -1.5, -0.25, 2.5, 1.5, 0.25, 2.5, 1.5, -0.25, 2.5, -1.5, -0.25, 2.5, 1.5, 0.25, -2.5, -1.5, 0.25, -2.5, 1.5, -0.25, -2.5, -1.5, 0.25, -2.5, -1.5, -0.25, -2.5, 1.5, -0.25, -2.5, 1.5, 0.25, 2.5, 1.5, 0.25, -2.5, 1.5, -0.25, 2.5, 1.5, 0.25, -2.5, 1.5, -0.25, -2.5, 1.5, -0.25, 2.5, -1.5, 0.25, -2.5, -1.5, 0.25, 2.5, -1.5, -0.25, -2.5, -1.5, 0.25, 2.5, -1.5, -0.25, 2.5, -1.5, -0.25, -2.5, 1.5, 0.25, 2.5, -1.5, 0.25, 2.5, 1.5, 0.25, -2.5, -1.5, 0.25, 2.5, -1.5, 0.25, -2.5, 1.5, 0.25, -2.5, -1.5, -0.25, 2.5, 1.5, -0.25, 2.5, -1.5, -0.25, -2.5, 1.5, -0.25, 2.5, 1.5, -0.25, -2.5, -1.5, -0.25, -2.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ppx43"]
points = PackedVector3Array(0.965434, 0.121574, -2.01977, 0.932358, 0.556089, -1.86685, 0.932358, 0.634299, -1.1173, 0.932358, 0.639683, -0.636438, 0.932358, 0.639683, 0.714095, 0.932358, 0.634299, 1.0219, 0.95296, 0.125196, 1.4755, 0.95296, 2.23517e-08, 1.47945, 0.965434, 2.23517e-08, -2.04308, 0.835021, 0.13332, -2.22721, 0.812529, 0.609828, -2.0984, 0.746945, 1, -0.56176, 0.746945, 1, 0.628353, 0.932358, 0.572631, 1.3862, 0.812529, 0.62637, 1.56401, 0.826516, 0.136942, 1.59483, 0.826516, 2.23517e-08, 1.58218, 0.835021, 2.23517e-08, -2.2438, 0.467786, 0.13332, -2.34574, 0.474779, 0.609828, -2.21693, 0.474779, 1, -0.632882, 0.474779, 1, 0.708959, 0.474779, 0.62637, 1.64382, 0.470432, 0.136942, 1.67464, 0.470432, 2.23517e-08, 1.662, 0.467786, 2.23517e-08, -2.36194, -0.467975, 0.13332, -2.34574, -0.474968, 0.609828, -2.21693, -0.474968, 1, -0.632882, -0.474968, 1, 0.708959, -0.474968, 0.62637, 1.64382, -0.470621, 0.136942, 1.67464, -0.470621, 2.23517e-08, 1.662, -0.467975, 2.23517e-08, -2.36194, -0.83521, 2.23517e-08, -2.2438, -0.83521, 0.13332, -2.22721, -0.812719, 0.609828, -2.0984, -0.747134, 1, -0.56176, -0.747134, 1, 0.628353, -0.812719, 0.62637, 1.56401, -0.826705, 0.136942, 1.59483, -0.826705, 2.23517e-08, 1.58218, -0.965434, 2.23517e-08, -2.04308, -0.965434, 0.121574, -2.01977, -0.932547, 0.556089, -1.86685, -0.932547, 0.634299, -1.1173, -0.932547, 0.639683, -0.636438, -0.932547, 0.639683, 0.714095, -0.932547, 0.634299, 1.0219, -0.932547, 0.572631, 1.3862, -0.953149, 0.125196, 1.4755, -0.953149, 2.23517e-08, 1.47945)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nca7n"]
albedo_color = Color(0.129412, 0.447059, 1, 1)
metallic = 1.0
metallic_specular = 1.0

[node name="Node3D" type="Node3D"]

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_f6nbg")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_pj52e")

[node name="Ramp" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0240657, -0.40861, 0.912392, 0, 0.912656, 0.408729, -0.99971, -0.00983636, 0.0219637, 3.72279, 0.703446, -4.40087)
mesh = SubResource("BoxMesh_ggtqs")

[node name="StaticBody3D" type="StaticBody3D" parent="Ramp"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ramp/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_1eaoi")

[node name="PlayerCar" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mass = 50.0
script = ExtResource("1_hpxx8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCar"]
mesh = ExtResource("2_8sdff")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCar"]
shape = SubResource("ConvexPolygonShape3D_ppx43")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="PlayerCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0.0619926, -1.44559)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCar/FrontLeftWheel"]
mesh = ExtResource("3_mfi84")

[node name="FrontRightWheel" type="VehicleWheel3D" parent="PlayerCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0.0619926, -1.44559)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCar/FrontRightWheel"]
mesh = ExtResource("3_mfi84")

[node name="BackLeftWheel" type="VehicleWheel3D" parent="PlayerCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0.0619926, 0.878332)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCar/BackLeftWheel"]
mesh = ExtResource("3_mfi84")

[node name="BackRightWheel" type="VehicleWheel3D" parent="PlayerCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0.0619926, 0.878332)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCar/BackRightWheel"]
mesh = ExtResource("3_mfi84")

[node name="ObstacleCar" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8827, 1, 0)
mass = 50.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="ObstacleCar"]
mesh = ExtResource("2_8sdff")
surface_material_override/0 = SubResource("StandardMaterial3D_nca7n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ObstacleCar"]
shape = SubResource("ConvexPolygonShape3D_ppx43")

[node name="FrontLeftWheel" type="VehicleWheel3D" parent="ObstacleCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0.0619926, -1.44559)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="ObstacleCar/FrontLeftWheel"]
mesh = ExtResource("3_mfi84")

[node name="FrontRightWheel" type="VehicleWheel3D" parent="ObstacleCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0.0619926, -1.44559)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="ObstacleCar/FrontRightWheel"]
mesh = ExtResource("3_mfi84")

[node name="BackLeftWheel" type="VehicleWheel3D" parent="ObstacleCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0.0619926, 0.878332)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="ObstacleCar/BackLeftWheel"]
mesh = ExtResource("3_mfi84")

[node name="BackRightWheel" type="VehicleWheel3D" parent="ObstacleCar"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 0.0619926, 0.878332)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35

[node name="MeshInstance3D" type="MeshInstance3D" parent="ObstacleCar/BackRightWheel"]
mesh = ExtResource("3_mfi84")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.403801, 0.914847, 0, -0.914847, -0.403801, 0, 14.7175, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.425179, 0.905109, 0, -0.905109, 0.425179, 0, 12.2274, 9.33234)
size = 18.619
